# varde

./: .elves-session.json  .gitignore  README.md  progress.md  pyproject.toml
.github/workflows/: tests.yml
docs/: cairn-rules.md  design-history.md  mcts-tactical-admission-results.md  native-screening-v2-results.md  ruleset-evaluation-status.md  uniform-mcts12-results.md  varde-breath-variants.md  varde-gjerde.md  varde-rosette-variant.md  varde-rules.md
docs/elves/: advanced-v2-execution.md  advanced-v2-learnings.md  advanced-v2-survival.md  evidence-method-feasibility-execution-log.md  evidence-method-feasibility-survival-guide.md  mcts-search-v3-execution-log.md  mcts-search-v3-learnings.md  mcts-search-v4-learnings.md  (+18 more)
engine/: actions.py  cairn.py  conftest.py  learning.py  mcts.py  mcts_settling.py  mcts_tactical_solver.py  mcts_unpruning.py  mcts_v5_settling.py  mcts_v5_solver.py  mcts_v5_unpruning.py  native_evaluators.py  opponent.py  profiles.py  selfplay.py  server.py  test_ablate_v3.py  test_actions_mcts.py  test_audit_v3.py  test_cairn.py  test_curate_v3.py  test_evaluator_v3.py  test_feasibility_gate.py  test_gate_profiles_v3.py  test_human_study.py  test_learning.py  test_mcts12_diagnostic.py  test_mcts_performance_evidence.py  test_mcts_tactical_admission.py  test_mcts_v4_evidence.py  test_mcts_v4_holdout.py  test_mcts_v4_settling.py  test_mcts_v4_solver.py  test_mcts_v4_unpruning.py  test_mcts_v5_corpus.py  test_mcts_v5_evidence.py  test_mcts_v5_factorial.py  test_mcts_v5_oracle.py  test_mcts_v5_settling.py  test_mcts_v5_solver.py  (+13 more)
research/: README.md
web/: game.js  index.html  styles.css
(+107 files in other folders)
