[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-game"
version = "0.1.0"
description = "Reference engine and local human/computer client for the Cairn territory game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cairn-selfplay = "selfplay:main"
cairn-server = "server:main"

[tool.setuptools]
py-modules = ["cairn", "learning", "opponent", "selfplay", "server"]
package-dir = {"" = "engine"}

[tool.pytest.ini_options]
testpaths = ["engine"]
pythonpath = ["engine"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
