[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "varde-game"
version = "0.1.0"
description = "Reference engine and local human/computer client for the Varde territory game (working title Cairn)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
varde-selfplay = "selfplay:main"
cairn-selfplay = "selfplay:main"
varde-server = "server:main"
cairn-server = "server:main"

[tool.setuptools]
py-modules = ["cairn", "learning", "opponent", "selfplay", "server"]
package-dir = {"" = "engine"}

[tool.pytest.ini_options]
testpaths = ["engine"]
pythonpath = ["engine"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
